# KaidaDB

./: Cargo.toml  README.md  config.toml  install.sh
crates/kaidadb-api/: Cargo.toml  build.rs
crates/kaidadb-api/src/: grpc.rs  lib.rs  rest.rs  streaming.rs
crates/kaidadb-cache/: Cargo.toml
crates/kaidadb-cache/src/: lib.rs
crates/kaidadb-cli/: Cargo.toml
crates/kaidadb-cli/src/: main.rs
crates/kaidadb-cluster/: Cargo.toml
crates/kaidadb-cluster/src/: lib.rs
crates/kaidadb-common/: Cargo.toml
crates/kaidadb-common/src/: config.rs  error.rs  lib.rs  server_key.rs  types.rs
crates/kaidadb-server/: Cargo.toml
crates/kaidadb-server/src/: main.rs
crates/kaidadb-storage/: Cargo.toml
crates/kaidadb-storage/src/: blob_store.rs  chunk_format.rs  engine.rs  index.rs  lib.rs
crates/kaidadb-storage/tests/: integration.rs
crates/kaidadb-tui/: Cargo.toml  build.rs
crates/kaidadb-tui/src/: app.rs  client.rs  main.rs  ui.rs
docs/: api-reference.md  architecture.md  cli-and-tui.md  configuration.md  getting-started.md  streaming-guide.md  when-to-use-kaidadb.md
proto/: kaidadb.proto
service/: kaidadb-ctl  kaidadb.openrc  kaidadb.service
