[workspace]
members = [
    "crates/kaidadb-common",
    "crates/kaidadb-storage",
    "crates/kaidadb-cache",
    "crates/kaidadb-cluster",
    "crates/kaidadb-api",
    "crates/kaidadb-server",
    "crates/kaidadb-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
kaidadb-common = { path = "crates/kaidadb-common" }
kaidadb-storage = { path = "crates/kaidadb-storage" }
kaidadb-cache = { path = "crates/kaidadb-cache" }
kaidadb-cluster = { path = "crates/kaidadb-cluster" }
kaidadb-api = { path = "crates/kaidadb-api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP/REST
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Storage
memmap2 = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Hashing / integrity
sha2 = "0.10"
crc32fast = "1"

# Caching
lru = "0.12"
parking_lot = "0.12"

# Bytes
bytes = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Misc
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
tempfile = "3"
tokio-stream = "0.1"
http = "1"
