[package]
name = "kaidadb-common"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
