[package]
name = "kaidadb-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kaidadb-tui"
path = "src/main.rs"

[dependencies]
kaidadb-common = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
